--- a/trunk/mspring-platform/pom.xml
+++ b/trunk/mspring-platform/pom.xml
@@ -230,10 +230,17 @@
 			<artifactId>aspectjweaver</artifactId>
 			<version>1.7.2</version>
 		</dependency>
+		<!--
 		<dependency>
 			<groupId>commons-httpclient</groupId>
 			<artifactId>commons-httpclient</artifactId>
 			<version>3.1</version>
+		</dependency>
+		-->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.1.3</version>
 		</dependency>
 	</dependencies>
 	<build>
