--- a/trunk/M-LOG/.classpath
+++ b/trunk/M-LOG/.classpath
@@ -12,7 +12,7 @@
 	<classpathentry kind="lib" path="lib/commons-collections-3.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-dbcp-1.4.jar"/>
 	<classpathentry kind="lib" path="lib/commons-fileupload-1.2.2.jar"/>
-	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-2.4.jar" sourcepath="d:/m2/repository/commons-io/commons-io/2.4/commons-io-2.4-sources.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang3-3.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-pool-1.5.4.jar"/>
@@ -63,7 +63,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/servlet-api-3.0.jar" sourcepath="d:/m2/repository/org/eclipse/jetty/orbit/javax.servlet/3.0.0.v201112011016/javax.servlet-3.0.0.v201112011016-sources.jar"/>
 	<classpathentry kind="lib" path="lib/jsp-api.jar"/>
-	<classpathentry kind="lib" path="lib/mspring-platform.jar"/>
+	<classpathentry kind="lib" path="lib/mspring-platform.jar" sourcepath="/mspring-platform"/>
 	<classpathentry kind="lib" path="lib/httpclient-4.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/httpclient-cache-4.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/httpcore-4.1.4.jar"/>
