--- a/trunk/mspring-platform/pom.xml
+++ b/trunk/mspring-platform/pom.xml
@@ -230,17 +230,17 @@
 			<artifactId>aspectjweaver</artifactId>
 			<version>1.7.2</version>
 		</dependency>
-		<!--
-		<dependency>
-			<groupId>commons-httpclient</groupId>
-			<artifactId>commons-httpclient</artifactId>
-			<version>3.1</version>
-		</dependency>
-		-->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.gif4j</groupId>
+			<artifactId>gif4j</artifactId>
+			<version>2.3</version>
+			<systemPath>${basedir}/lib/gif4j_pro_trial_2.3.jar</systemPath>
+			<scope>system</scope>
 		</dependency>
 	</dependencies>
 	<build>
